--- a/public/Partials/footer.css
+++ b/public/Partials/footer.css
@@ -6,7 +6,22 @@ footer {
     width: 100%;
     bottom: 0;
     left: 0;
+    position: relative;
+    box-sizing: border-box;
 }
-p{
-    font-size: 1.50rem;
+
+p {
+    font-size: 1.5rem;
+}
+
+@media (max-width: 768px) {
+    p {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 480px) {
+    p {
+        font-size: 1rem;
+    }
 }
