--- a/views/Auth/login.ejs
+++ b/views/Auth/login.ejs
@@ -14,8 +14,10 @@
 
         <label for="password">Enter Password:</label>
         <input type="password" id="password" name="Password" required><br>
-        <input type="submit">
+
+        <input type="submit" value="Login">
     </form>
+    <p>Don't have an account? <a href="/signup">Sign up here</a></p>
     <%- include('../partials/footer')%>
 </body>
 </html>
