--- a/public/Auth/login.css
+++ b/public/Auth/login.css
@@ -49,3 +49,18 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #244ec9;
 }
+
+p {
+    text-align: center;
+    margin-top: 20px;
+}
+
+a {
+    color: #2e6eea;
+    text-decoration: none;
+    font-weight: normal;
+}
+
+a:hover {
+    text-decoration: underline;
+}
