Small Change In Nave

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,7 +14,7 @@
         <ul class="navbar">
             <li><a href="/">Home</a></li>
             <li><a href="/reviews">Reviews</a></li>
-            <li><a href="/submit-booking">Rooms</a></li>
+            <li><a href="/submit-booking">Hotels</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
