--- a/views/Display/hi.ejs
+++ b/views/Display/hi.ejs
@@ -11,7 +11,7 @@
     <main>
         <fieldset>
             <legend>Select The Hotel</legend>
-        <form action="/end">
+        <form action="/end" method="post">
         <div class="hotel-container">
             <div class="hotel-card">
                 <img src="/images/istockphoto-119926339-612x612.jpg" alt="Hotel Image">
