--- a/views/Auth/login.ejs
+++ b/views/Auth/login.ejs
@@ -4,18 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Auth/login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <title>Login Page</title>
 </head>
 <body>
     <%- include('../partials/nav')%>
     <form action="/login" method="post">
-        <label for="email">Enter Your Email:</label>
-        <input type="email" id="email" name="Email" required><br>
+    <label for="email">Enter Your Email:</label>
+<div class="input-icon">
+  <i class="fa-solid fa-envelope"></i>
+  <input type="email" id="email" name="Email" required>
+</div>
 
-        <label for="password">Enter Password:</label>
-        <input type="password" id="password" name="Password" required><br>
+<label for="password">Enter Password:</label>
+  <div class="input-icon">
+  <i class="fa-solid fa-lock"></i>
+  <input type="password" id="password" name="Password" required>
+</div>
 
-        <input type="submit" value="Login">
+<button type="submit">
+  <i class="fa-solid fa-right-to-bracket"></i> Login
+</button>
     </form>
     <p>Don't have an account? <a href="/signup">Sign up here</a></p>
     <%- include('../partials/footer')%>
