--- a/views/Auth/signup.ejs
+++ b/views/Auth/signup.ejs
@@ -4,22 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Auth/signup.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <title>Signup</title>
 </head>
 <body>
     <%- include('../partials/nav')%>
     <form action="" method="post">
-        <label for="Name">Enter Your Name:</label>
-        <input type="text" id="Name" name="Name" required><br>
+    <label for="Name">Enter Your Name:</label>
+  <div class="input-icon">
+    <i class="fa-solid fa-user"></i>
+    <input type="text" id="Name" name="Name" required>
+  </div>
 
-        <label for="email">Enter Email</label>
-        <input type="email" id="email" name="Email" required><br>
+  <label for="email">Enter Email:</label>
+  <div class="input-icon">
+    <i class="fa-solid fa-envelope"></i>
+    <input type="email" id="email" name="Email" required>
+  </div>
 
-        <label for="pass">Enter Your Pass</label>
-        <input type="password" id="pass" name="Password" required>
+  <label for="pass">Enter Your Password:</label>
+  <div class="input-icon">
+    <i class="fa-solid fa-lock"></i>
+    <input type="password" id="pass" name="Password" required>
+  </div>
 
-        <input type="submit">
-    </form>
+  <button type="submit">
+    <i class="fa-solid fa-right-to-bracket"></i> Signup
+  </button>
+</form>
+
     <%- include('../partials/footer')%>
 </body>
 </html>
