--- a/public/Display/hi.css
+++ b/public/Display/hi.css
@@ -21,6 +21,7 @@ main {
     justify-content: center;
     gap: 20px;
     max-width: 1200px;
+    overflow: hidden;
 }
 
 .hotel-card {
@@ -31,6 +32,13 @@ main {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     padding-bottom: 15px;
+    transition: transform 1s ease;
+    transform-origin: center center;
+}
+.hotel-card:hover {
+    transform: scale(1.08);
+    z-index: 1; 
+    position: relative;
 }
 
 .hotel-card img {
